--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="semi_black">#292B29</color>
     <color name="dark_blue">#00008B</color>
     <color name="gray">#686666</color>
-    <color name="light_gray">#F2F3F4</color>
+    <color name="light_gray">#E1E4E7</color>
 </resources>
