--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,7 +7,7 @@
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.authentication.LoginFragment">
+    tools:context=".view.authentication.LoginFragment">
 
     <TextView
     android:id="@+id/tvHeadlineLogin"
