--- a/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/app/src/main/res/layout/fragment_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/splash_screen"
-    tools:context=".ui.splashscreen.SplashScreenFragment">
+    tools:context=".view.splashscreen.SplashScreenFragment">
 
     <pl.droidsonroids.gif.GifImageView
         android:layout_width="200dp"
