--- a/app/src/main/res/layout/fragment_detail_disney_chara.xml
+++ b/app/src/main/res/layout/fragment_detail_disney_chara.xml
@@ -60,6 +60,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="68dp"
         android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/white"
         android:elevation="5dp"
         app:cardCornerRadius="5dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,6 +72,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
+            android:background="@color/white"
             android:orientation="vertical">
 
             <ImageView
@@ -86,7 +88,8 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="8dp"
                 android:text="Nama Karakter"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textColor="@color/gray"/>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayoutFilm"
@@ -102,6 +105,7 @@
                     android:layout_marginStart="16dp"
                     android:text="@string/film"
                     android:textSize="16sp"
+                    android:textColor="@color/gray"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -113,6 +117,7 @@
                     android:layout_height="wrap_content"
                     android:text="-"
                     android:textSize="16sp"
+                    android:textColor="@color/gray"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/tvFilmLabel"
                     app:layout_constraintTop_toTopOf="@+id/tvFilmLabel"
@@ -133,6 +138,7 @@
                     android:layout_marginStart="16dp"
                     android:text="@string/film_pendek"
                     android:textSize="16sp"
+                    android:textColor="@color/gray"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -144,6 +150,7 @@
                     android:layout_height="wrap_content"
                     android:text="-"
                     android:textSize="16sp"
+                    android:textColor="@color/gray"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/tvShortFilmLabel"
                     app:layout_constraintTop_toTopOf="@+id/tvShortFilmLabel"
@@ -164,6 +171,7 @@
                     android:layout_marginStart="16dp"
                     android:text="@string/acara_tv"
                     android:textSize="16sp"
+                    android:textColor="@color/gray"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -175,6 +183,7 @@
                     android:layout_height="wrap_content"
                     android:text="-"
                     android:textSize="16sp"
+                    android:textColor="@color/gray"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/tvTvShowsLabel"
                     app:layout_constraintTop_toTopOf="@+id/tvTvShowsLabel"
@@ -195,6 +204,7 @@
                     android:layout_marginStart="16dp"
                     android:text="@string/permainan_video"
                     android:textSize="16sp"
+                    android:textColor="@color/gray"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -206,6 +216,7 @@
                     android:layout_height="wrap_content"
                     android:text="-"
                     android:textSize="16sp"
+                    android:textColor="@color/gray"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/tvGamesLabel"
                     app:layout_constraintTop_toTopOf="@+id/tvGamesLabel"
