--- a/app/src/main/res/layout/fragment_setting_language.xml
+++ b/app/src/main/res/layout/fragment_setting_language.xml
@@ -20,7 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/bahasa_indonesia"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:textColor="@color/black"/>
 
         <View
             android:layout_width="match_parent"
@@ -34,7 +35,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="@string/bahasa_inggris"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:textColor="@color/black"/>
 
         <View
             android:layout_width="match_parent"
